<resources>
    <string name="app_name">MY SHOP</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>


    <string-array name="spinner_items">
        <item>Retail</item>
        <item>Wholesale</item>
    </string-array>
</resources>