<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="332dp"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:src="@drawable/piechart" />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/welcome_back"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/buttoncolour"
        android:textStyle="bold"
        />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_to_your_account"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/buttoncolour"
        android:paddingStart="10dp"
        android:textSize="17sp"
        android:inputType="text"
        android:background="@drawable/edittext_design"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/mail"
        />
  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="51dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:hint="Password"
      android:inputType="textPassword"
      android:textColorHint="@color/buttoncolour"
      android:textSize="17sp"
      android:background="@drawable/edittext_design"
      android:layout_gravity="center"
      android:drawableLeft="@drawable/password"
      android:paddingStart="10dp"
  />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="0dp"
      android:layout_gravity="center"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/buttoncolour"
            />
    </LinearLayout>

  <Button
        android:id="@+id/btnLogin"
        android:layout_width="309dp"
        android:layout_height="51dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_design"
        android:layout_gravity="center"
        />
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginEnd="2dp"
        android:textColor="@color/black"

        />
    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="19sp"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/buttoncolour"
        />
  </LinearLayout>

  </LinearLayout>